<resources>
    <string name="app_name">Scheme</string>

    <string name="tab_text_1">Lectures</string>
    <string name="tab_text_2">Timetable</string>

    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <!--    SelectLecture-->
    <!--    DoctorsFragment-->
    <!--    LectureSelectionFragment-->
    <string name="LecFragmentTitle">Available Lectures</string>
    <string name="DocFragmentTitle">Available Doctors</string>
    <string name="LecDocFragmentTitle">Select an item</string>

    <string name="ConnectionRetry">Failed to connect to the server, retry?</string>
    <string name="ConnectionFailed">Connection failed, no changes were made</string>

    <!--    SetupDialog.kt-->
    <string name="CompleteSetupTitle">Complete Setup</string>
    <string name="CompleteSetupMessage">More information is required to start using the application features, press OK to continue</string>
    <string name="CompleteSetupAction">OK</string>

    <!--    MainFragment.kt-->
    <string name="UpdateAvailable">Your data could be outdated, an update is available</string>

    <!--    App.java-->
    <string name="channel_name">LectureChannel</string>
    <string name="channel_description">Notification channel that shows reminders for upcoming lectures</string>
    <string name="channel_name2">EventChannel</string>
    <string name="channel_description2">Notification channel that shows reminders for upcoming events</string>



    <!--    fragment_settings.xml-->
    <string name="tab3_name">Name</string>
    <string name="tab3_seatnumber">Seat Number</string>
    <string name="tab3_university">University</string>
    <string name="tab3_faculty">Faculty</string>
    <string name="tab3_year">School Year</string>
    <string name="tab3_section">Section</string>
    <string name="edit_ic">Edit</string>

    <!--    tab1_item.xml-->
    <string name="default_lec">Lecture</string>
    <string name="default_doc">Doctor</string>
    <string name="default_place">Place</string>
    <string name="default_time">08:00 AM</string>
    <string name="default_day">Sunday</string>
    <string name="default_section">Section</string>
    <string name="default_time_left">Today</string>
    <string name="default_time_left_desc">Time left</string>
    <!--    fragment_tab1.xml-->
    <string name="thumbs_up">thumbs up!</string>

    <!--    Menus-->
    <string name="menuSettings">Settings</string>
    <string name="menuAddEvent">Add Event</string>


    <!--    edit_event.xml-->
    <string name="taskHint">Task</string>
    <string name="colorHint">Color</string>
    <string name="dayHint">Day</string>
    <string name="startingHint">Starts at</string>
    <string name="endingHint">Ends at</string>


    <!-- days -->
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>

    <!-- MainFragment.xml-->
    <string name="addLecture">Add Lecture</string>

</resources>